What's new...

Apr 19/2020 : JF 21.2 released
  - improved build scripts
  - added graal support although not much works with it yet
    to build a project with graal use the 'graal' ant task:
      ant graal

Mar 20/2020 : JF 21.1 released
  - jfDVR/0.8
    - fix : buffer overflow issues

Mar 18/2020 : JF 21.0 released
  - major fix : win64 loader now loads msvcrt dlls included with jre properly
    - tested msi packages in Windows Sandbox, they no longer require msvcrt to be pre-installed.
    - all msi packages will be re-released

Mar 17/2020 : JF 20.1.0 released
  - jfDVR/0.6
    - fix : use 24 hour format in filenames

Mar 10/2020 : JF 20.0.0 released
  - fix : mac support has been fixed
    - note : the icns look corrupted but using Finder or Preview they look good
      - could be a MacOS bug
  - jfPaint/0.24
    - new : create MacOS .dmg

Mar 9/2020 : JF 19.6.0 released
  - jfDVR/0.5
    - fix : loading ffmpeg libraries
    - new : uses JDK14-ZGC which results in lower virtual memory usage
      - requires Win10-1803 or WinServer 2019 or better

Mar 3/2020 : JF 19.5.0 released
  - jfPhone/1.18
    - fix : audio delay when switching lines

Mar 2/2020 : JF 19.4.0 released
  - jfDVR/0.4
    - new : preview image and view motion value thru web UI
    - fix : file size logic was incorrect

Mar 1/2020 : JF 19.3.0 released
  - jfDVR/0.3
    - new : just changing camera options does not stop/start the camera
            (which was causing the app to crash if too many were restarted quickly)
    - fix : was not tracking folder storage properly

Feb 28/2020 : JF 19.2.0 released
  - jfDVR/0.2
    - fix : run in one process or system runs out of virtual memory
  - jfPasswords/0.22
    - fix : msi package was missing DLLs

Jan 30/2020 : JF 19.1.0 released
  - jfBackup/0.10
    - fix restore job not detecting drive is empty

Jan 7/2020 : JF 19.0.0 released
  - jfDVR/0.1
    - after 6 long months of development it's finally ready